--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ header{
     position: relative;
     margin: 0 auto;
 }
-header>div{
+.titre{
     position: absolute;
     top: 150px;
     left: 0;
@@ -41,6 +41,9 @@ h1,h2,h3{
     font-weight: bold;
     text-align: center;
 }
+.cache{
+    display: none;
+}
 nav{
     background-image: none;
     padding: 0;
@@ -50,6 +53,19 @@ nav{
 }
 a{
     text-decoration: none;
+}
+.fas{
+    color:#2566A4;
+}
+.menuBurger{
+    position: absolute;
+    top: 10px;
+    right: 30px;
+}
+.menuBurger>button{
+    display: block;
+    border:none;
+    background-color: #FFFF;
 }
 main{
     display: flex;
@@ -63,6 +79,18 @@ main{
 }
 img{
     width: 100%;
+}
+.diplomes{
+    display: flex;
+    justify-content: center;
+    gap:10px;
+    padding: 5px;
+}
+figure{
+    width: 40%;
+}
+figcaption{
+    font-size: 12px;
 }
 form{
     display: flex;
