--- a/style.css
+++ b/style.css
@@ -43,13 +43,19 @@ h1,h2,h3{
     margin-bottom: 5%;
 }
 .cache{
-    display: none;
+    visibility: hidden;
+}
+.afficher{
+    visibility: visible;
 }
 nav{
+    margin-top: 2%;
+    display: flex;
+    flex-direction: column;
     background-image: none;
     padding: 0;
     position: absolute;
-    top: 5px;
+    top: 20px;
     right: 0;
 }
 a{
