--- a/style.css
+++ b/style.css
@@ -88,17 +88,33 @@ main{
 img{
     width: 100%;
 }
+.Artcolombbus, .ArtMissions{
+    border:solid 1px #D8DBE3;
+    border-radius: 20px;
+    padding: 5%;
+    background-color: #ECF0F3;
+    margin-bottom: 5%;
+    box-shadow: inset 2px 2px 0 0 #b6bac0e8,inset -2px -2px 0 0 #FFFF;
+}
 .diplomes{
     display: flex;
     justify-content: center;
     gap:10px;
     padding: 5px;
 }
+.realisations{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    text-align: center;
+    margin: 5px;
+}
 figure{
     width: 40%;
 }
 figcaption{
     font-size: 12px;
+    text-align: center;
 }
 .github{
     text-align: center;
@@ -117,9 +133,15 @@ form{
 }
 input, textarea{
     border-radius: 15px;
+    box-shadow: 2px 2px 0 0 #9AA7B2;
+    border: 2px solid #B6B2B9;
     padding: 5%;
     background-color: #ECF0F3;
     border-color: #B6B2B9;
+}
+.btnContact{
+    padding: 3%;
+    width: 30%;
 }
 #fermerCv{
     position: absolute;
