Amélioration du placement du bouton de fermeture de la fenetre modale

--- a/style.css
+++ b/style.css
@@ -257,8 +257,8 @@ object{
         width: 40%;
     }
     #fermerCv{
-      top : 950px;
-      right: 19vh;
+      top : 120vh;
+      right: 20.5vh;
     }
     .Artcolombbus,  .ArtMissions{
         width: 30%;
