--- a/style.css
+++ b/style.css
@@ -223,12 +223,14 @@ object{
     display: block;
 }
 .scroll-top{
-    position: relative;
+    position: absolute;
+    bottom: 0;
+    right: 10%;
     margin-bottom: 4%;
 }
 #btn-scroll{
-    position: absolute;
-    right: 2%;
+    position: fixed;
+    bottom: 1%;
     font-size: 30px;
 }
 
@@ -245,6 +247,9 @@ object{
     }
     #fermerCv{
         right: 6vh;
+    }
+    .scroll-top{
+        right: 5%;
     }
 }
 
@@ -311,6 +316,9 @@ object{
     }
     form{
         width: 30%;
+    }
+    .scroll-top{
+        right: 5%;
     }
     #btn-scroll>.fas{
         font-size: 50px;
